--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
-         <-- <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="glightbox play-btn"></a>-->
+         <-- <a class="glightbox play-btn"></a>-->
         <video width="560" height="315" controls>
     <source src="assets/img/videos/mainvideo.mp4" type="video/mp4">
     <source src="videos/my-video.webm" type="video/webm"> <!-- Optional: another format -->
