--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
          <-- <a class="glightbox play-btn"></a>-->
         <video width="560" height="315" controls>
-    <source src="assets/img/videos/mainvideo.mp4" type="video/mp4"> class="glightbox play-btn"></a>
+    <source src="assets/img/videos/mainvideo.mp4" type="video/mp4" class="glightbox play-btn"></a>
     <source src="videos/my-video.webm" type="video/webm"> <!-- Optional: another format -->
     Your browser does not support the video tag.
 </video>
