--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <p style="color: white;">
-            <h3>Best of Both Worlds: Georgian & European Cuisine.</h3>
+              <p style="color: white;"><h3>Best of Both Worlds: Georgian & European Cuisine.</h3> </p>
             <p class="fst-italic">
-              Delight in a diverse menu that blends the rich, bold flavors of traditional Georgian dishes with the elegance of European culinary classics.
+              <p style="color: white;"> Delight in a diverse menu that blends the rich, bold flavors of traditional Georgian dishes with the elegance of European culinary classics.</p>
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> Authentic Recipes, Modern Flair.</li>
@@ -379,7 +379,7 @@
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-4">Ajapsandali</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Kharcho</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Pkhali</a>
               </li>
             </ul>
           </div>
@@ -938,11 +938,11 @@
                 <strong>Email:</strong> info@alkhazishvili.com<br>                
               </p> Alkhazishvili2@gmail.com
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.facebook.com/lasha.alkhazishvili/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/alkhaz_a/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://github.com/N1TROXXX" class="Github"><i class="bx bxl-github"></i></a>
+                <a href="https://www.behance.net/lashaalkhazi1" class="behance"><i class="bx bxl-behance"></i></a>
+                <a href="https://www.linkedin.com/in/lasha-alkhazishvili/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
