--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-6 order-1 order-lg-2" <!-- data-aos="zoom-in" data-aos-delay="100">-->
             <div class="about-img">
               <img src="assets/img/about.jpg" alt="">
             </div>
