--- a/index.html
+++ b/index.html
@@ -100,56 +100,55 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-<section id="hero" class="d-flex align-items-center">
-  <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
-    <div class="row">
-      <div class="col-lg-8">
-        <h1 style="color: white;">Welcome to <span>Restaurant Telavi</span></h1>
-        <h2 style="color: white;">Georgian Hearth: Where Tradition Meets Taste!</h2>
+  <section id="hero" class="d-flex align-items-center">
+    <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
+      <div class="row">
+        <div class="col-lg-8">
+          <h1>Welcome to <span>Restaurant Telavi</span></h1>
+          <h2>Georgian Hearth: Where Tradition Meets Taste!</h2>
 
-        <div class="btns">
-          <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-          <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a>
+          <div class="btns">
+            <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
+            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a>
+          </div>
+        </div>
+        <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
+          <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="glightbox play-btn"></a>
+        </div>
+
+      </div>
+    </div>
+  </section><!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= About Section ======= -->
+<section id="about" class="about">
+  <div class="container" data-aos="fade-up">
+    <div class="row">
+      <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
+        <div class="about-img">
+          <img src="assets/img/about.jpg" alt="">
         </div>
       </div>
-      <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
-        <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="glightbox play-btn"></a>
+      <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+        <h3 style="color: white;">Best of Both Worlds: Georgian & European Cuisine.</h3>
+        <p class="fst-italic" style="color: white;">
+          Delight in a diverse menu that blends the rich, bold flavors of traditional Georgian dishes with the elegance of European culinary classics.
+        </p>
+        <ul>
+          <li><i class="bi bi-check-circle"></i> Authentic Recipes, Modern Flair.</li>
+          <li><i class="bi bi-check-circle"></i> Fresh, Quality Ingredients.</li>
+          <li><i class="bi bi-check-circle"></i> Indulge in a curated selection of handcrafted Georgian wines from our private cellar, celebrating the world’s oldest winemaking traditions.</li>
+        </ul>
+        <p style="color: white;">
+          Georgia, known as the “Cradle of Wine,” boasts over 8,000 years of winemaking history. We offer a carefully curated selection of handcrafted Georgian wines, made from indigenous grape varieties such as Saperavi, Rkatsiteli, and others...
+        </p>
       </div>
     </div>
   </div>
-</section>
-<!-- End Hero -->
+</section><!-- End About Section -->
 
-<main id="main">
-
-  <!-- ======= About Section ======= -->
-  <section id="about" class="about">
-    <div class="container" data-aos="fade-up">
-      <div class="row">
-        <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
-          <div class="about-img">
-            <img src="assets/img/about.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-          <h3 style="color: white;">Best of Both Worlds: Georgian & European Cuisine.</h3>
-          <p class="fst-italic" style="color: white;">
-            Delight in a diverse menu that blends the rich, bold flavors of traditional Georgian dishes with the elegance of European culinary classics.
-          </p>
-          <ul style="color: white;">
-            <li><i class="bi bi-check-circle"></i> Authentic Recipes, Modern Flair.</li>
-            <li><i class="bi bi-check-circle"></i> Fresh, Quality Ingredients.</li>
-            <li><i class="bi bi-check-circle"></i> Indulge in a curated selection of handcrafted Georgian wines from our private cellar, celebrating the world’s oldest winemaking traditions.</li>
-          </ul>
-          <p style="color: white;">
-            Georgia, known as the “Cradle of Wine,” boasts over 8,000 years of winemaking history. We offer a carefully curated selection of handcrafted Georgian wines, made from indigenous grape varieties such as Saperavi, Rkatsiteli, and others...
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End About Section -->
-</main>
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
       <div class="container" data-aos="fade-up">
