--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in" data-aos-delay="200">
-          <a href="https://www.youtube.com/watch?v=GlrxcuEDyF8" class="glightbox play-btn"></a>
+          <a href="https://www.youtube.com/watch?v=uMGFzcvlt2M" class="glightbox play-btn"></a>
         </div>
 
       </div>
@@ -650,7 +650,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  We hosted a birthday party at [Your Restaurant Name], and everything was perfect! The decor, food, and service exceeded our expectations. Our friends are still talking about how wonderful the evening was!
+                  We hosted a birthday party at Restaurant Telavi, and everything was perfect! The decor, food, and service exceeded our expectations. Our friends are still talking about how wonderful the evening was!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
@@ -871,7 +871,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@ealkhazishvili.com</p>
+                <p>info@alkhazishvili.com</p>
               </div>
 
               <div class="phone">
